--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { 
+    height: 100%; 
+    margin: 10px;
+}
+body { 
+    margin: 0; 
+    font-family: Roboto, 
+    "Helvetica Neue", sans-serif; 
+}
+
+.main-container {
+    display: inline-flex;
+    flex-wrap: wrap;
+
+    > div {
+        margin: 10px;
+    }
+}
