learn angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet />
+<app-menu></app-menu>
 
 <div class="main-container">
     <div>
@@ -14,3 +14,5 @@
         <app-autocomplete></app-autocomplete>
     </div>
 </div>
+
+<router-outlet />
