--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,12 @@
     <div>
         <app-autocomplete></app-autocomplete>
     </div>
+    <div>
+        <app-badge></app-badge>
+    </div>
 </div>
 
-<router-outlet />
+<div class="page-content">
+    <router-outlet />
+</div>
+
